--- a/Views/add_job.cshtml
+++ b/Views/add_job.cshtml
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Add a New Job</title>
+    <script src="Content/js/jquery-3.0.0.js"></script>
+    <script src="Content/js/scripts.js"></script>
   </head>
   <body>
     <form action="/jobs" method="post">
       <label for ="new-job">Add a new job</label>
       <input id ="new-job" name="new-job" type="text" required>
+      <div class="responsibilityInputDiv">
+        <label for ="new-responsibility0">Add a new responsibility</label>
+        <input id ="new-responsibility0" name="new-responsibility0" type="text" required>
+      </div>
+      <button type="button" class="additional-responsibility">Add another Responsibility</button>
       <button type="submit">Submit</button>
     </form>
     <a href="/jobs">View All Jobs</a>
