allow user to enter variable number of responsibilities which display in a list in our job details

--- a/Views/add_job.cshtml
+++ b/Views/add_job.cshtml
@@ -16,9 +16,13 @@
           <input class ="responsibility-description" name="responsibility-description0" type="text" required>
         </div>
       </div>
-      <button type="button" class="additional-responsibility" formaction="/addresponsibility">Add another Responsibility</button>
+      <input id="number-of-responsibilities" name="number-of-responsibilities" value=1 type="number">
+      <button type="button" class="additional-responsibility">Add another Responsibility</button>
       <button type="submit">Submit</button>
     </form>
+    <!-- <form action="/addresponsibility">
+      <button type="submit" class="additional-responsibility" method="post">Add another Responsibility</button>
+    </form> -->
     <a href="/jobs">View All Jobs</a>
     <a href="/">Home</a>
   </body>
