--- a/Views/add_job.cshtml
+++ b/Views/add_job.cshtml
@@ -5,6 +5,7 @@
     <title>Add a New Job</title>
     <script src="Content/js/jquery-3.0.0.js"></script>
     <script src="Content/js/scripts.js"></script>
+    <link rel="stylesheet" href="Content/css/styles.css" type="text/css">
   </head>
   <body>
     <form id="job-form" action="/jobs" method="post">
@@ -17,7 +18,7 @@
         </div>
       </div>
       <input id="number-of-responsibilities" name="number-of-responsibilities" value=1 type="number">
-      <button type="button" class="additional-responsibility">Add another Responsibility</button>
+      <button type="button" class="additional-responsibility" value=2 name="addButton">Add another Responsibility</button>
       <button type="submit">Submit</button>
     </form>
     <!-- <form action="/addresponsibility">
